# ForgeStore

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  build.sh  convert.sh  customize.sh  module.prop  sepolicy.rule  service.sh  settings.gradle.kts
.github/workflows/: build.yml
RaPLT/: .gitignore  Android.mk  Application.mk  CMakeLists.txt  LICENSE  README.md
RaPLT/.github/workflows/: ci.yml
RaPLT/include/: raplt.h  raplt_cfi.h  raplt_core.h  raplt_elf.h  raplt_hash.h  raplt_log.h  raplt_mremap.h  raplt_recon.h  raplt_signal.h  raplt_util.h
RaPLT/src/: raplt_cfi.c  raplt_core.c  raplt_dlopen.c  raplt_elf.c  raplt_hash.c  raplt_jni.c  raplt_mremap.c  raplt_recon.c  raplt_signal.c  raplt_util.c
RaPLT/tests/: Makefile  run_tests.sh  test_batch.c  test_core.c  test_elf.c  test_fixture.c  test_got_patch.c  test_hash.c  test_hook  test_hook.c  test_hook_caller.c  test_region  test_region.c  test_runner.h  test_signal_safety.c  test_sleb128.c
RaPLT/tests/app/: ci_test.sh  settings.gradle.kts
RaPLT/tests/app/app/: build.gradle.kts
RaPLT/tests/app/app/src/main/: AndroidManifest.xml
RaPLT/tests/app/app/src/main/cpp/: CMakeLists.txt  calc_impl.c  jni_bridge.c
RaPLT/tests/app/app/src/main/java/com/raplt/test/: MainActivity.java  RaPLTApp.java
RaPLT/tests/test_stubs/: link.h  link_stub.h
RaPLT/tests/test_stubs/android/: log.h
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  hook.cpp  hook.h  injector.c  kmsg.c  log.h  main.c  stub_binder.cpp  stub_utils.cpp  updaemon.cpp
app/src/main/kotlin/com/dere3046/forgemint/: App.kt  AttestationBuilder.kt  AttestationConstants.kt  AttestationPatcher.kt  BinderInterceptor.kt  CertificateHelper.kt  ConfigManager.kt  GeneratedKeyPersistence.kt  KeyMintInterceptor.kt  KeyboxReader.kt  Keystore2Interceptor.kt  Logger.kt  SoftwareOperation.kt  StateManager.kt
app/src/main/kotlin/com/dere3046/forgestore/: App.kt  AttestationBuilder.kt  AttestationConstants.kt  AttestationPatcher.kt  AuthorizeCreate.kt  BinderInterceptor.kt  CertificateBuilder.kt  CertificateHelper.kt  ConfigManager.kt  DeviceAttestationService.kt  GeneratedKeyPersistence.kt  KeyMintAttestation.kt  KeyMintInterceptor.kt  KeyboxReader.kt  Keystore2Interceptor.kt  KeystoreInterceptor.kt  KmsgLogger.kt  Logger.kt  OperationInterceptor.kt  SoftwareOperation.kt  StateManager.kt  TeeChecker.kt  TeeLatencySimulator.kt
keys/: cert_chain.der  privkey_ec.der
module/: customize.sh  daemon  module.prop  service.sh
module/src/: customize.sh  daemon  service.sh  verify.sh
src/: CMakeLists.txt  hook.c  hook.h  injector.c  keybox.c  keybox.h  log.h  main.c
stub/: build.gradle.kts
stub/src/main/java/android/hardware/security/keymint/: BlockMode.java  KeyParameter.java  KeyParameterValue.java  KeyPurpose.java  PaddingMode.java  SecurityLevel.java  Tag.java
stub/src/main/java/android/security/: Credentials.java  KeyStore.java
stub/src/main/java/android/security/keymaster/: ExportResult.java  KeyCharacteristics.java  KeymasterArgument.java  KeymasterArguments.java  KeymasterCertificateChain.java  KeymasterDefs.java
stub/src/main/java/android/security/keystore/: IKeystoreCertificateChainCallback.java  IKeystoreExportKeyCallback.java  IKeystoreKeyCharacteristicsCallback.java  IKeystoreService.java  KeystoreResponse.java
stub/src/main/java/android/system/keystore2/: IKeystoreOperation.java  KeyMetadata.java
